--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="manualSection">
 			<!--image slider start-->
 			<div class="slider">
-				
+				<input type="range" id="slider" value="0.5" min="0.0" max="100.0" step="1" />
 				<div class="slides">									
 					<div class="slide one"><img id="phaseOne1" src="Assets/Phase1/1.png" alt="" ></div>
 					<div class="slide two"><img id="phaseOne2" src="Assets/Phase1/2.png" alt=""></div>					
