--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<!--video player start-->
 			<div class="videoPlayer">	
 				<div class="videos">
-					<video class="videox" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase1/v1.mp4" type="video/mp4" alt=""></video>
+					<video class="videox" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase1/01.webm" type="video/webm" alt=""></video>
 					<video class="videox" id="phaseOneV2" loop><source src="Assets/Phase1/v2.mp4" type="video/mp4" alt=""></video>
 					<video class="videox" id="phaseOneV3" loop><source src="Assets/Phase1/v3.mp4" type="video/mp4" alt=""></video>
 					<video class="videox" id="phaseOneV4" loop><source src="Assets/Phase1/v4.mp4" type="video/mp4" alt=""></video>
@@ -58,7 +58,7 @@
 
 				<div class="rangeSlider">
 					<div class="rangeSlider width">
-						<input type="range" id="slider" value="47.25" min="-260.5" max="355" step="-1%" />
+						<input type="range" id="slider" value="47.25" min="-260.5" max="355" step="-1" />
 
 <!--how to get value of slides div width to input value-->
 <!--MAC image and video color-->
