--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 	<title>Fitting Room</title>
 
-	<link rel="stylesheet" href="style.css" />
-	<script src="jquery-3.6.0.min.js"></script>	
+	<link rel="stylesheet" href="style-p1.css" />
+	<script src="java/jquery-3.6.0.min.js"></script>	
 </head>
 <body>	
 	<div class="container">
@@ -31,12 +31,12 @@
 			<!--video player start-->
 			<div class="videoPlayer">	
 				<div class="videos">
-					<video class="videox" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase1/01.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV2" loop><source src="Assets/Phase1/v2.mp4" type="video/mp4" alt=""></video>
-					<video class="videox" id="phaseOneV3" loop><source src="Assets/Phase1/v3.mp4" type="video/mp4" alt=""></video>
-					<video class="videox" id="phaseOneV4" loop><source src="Assets/Phase1/v4.mp4" type="video/mp4" alt=""></video>
-					<video class="videox" id="phaseOneV5" loop><source src="Assets/Phase1/v5.mp4" type="video/mp4" alt=""></video>
-					<video class="videox" id="phaseOneV6" loop><source src="Assets/Phase1/v6.mp4" type="video/mp4" alt=""></video>
+					<video class="videox active" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase1/01.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV2" loop><source src="Assets/Phase1/02.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV3" loop><source src="Assets/Phase1/03.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV4" loop><source src="Assets/Phase1/04.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV5" loop><source src="Assets/Phase1/05.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV6" loop><source src="Assets/Phase1/06.webm" type="video/webm" alt=""></video>
 				</div>				
 			</div>
 			<!--video player end-->
@@ -58,10 +58,7 @@
 
 				<div class="rangeSlider">
 					<div class="rangeSlider width">
-						<input type="range" id="slider" value="47.25" min="-260.5" max="355" step="-1" />
-
-<!--how to get value of slides div width to input value-->
-<!--MAC image and video color-->
+						<input type="range" id="slider" value="-20" min="-69" max="30" step="-1" />
 
 						<div id="selector">
 							<div class="selectBtn"></div>
@@ -103,7 +100,7 @@
 		</div>
 		<!--Manual section end-->		
 	</div>
-	<script src="jQuery.js"></script>
+	<script src="java/script-p1.js"></script>
 
 	<svg  class="svgIcons" xmlns="http://www.w3.org/2000/svg">
 		<symbol id="playIcon" viewBox="0 0 8 8" fill="none">
