--- a/index-p2.html
+++ b/index-p2.html
@@ -3,7 +3,7 @@
 	<title>Fitting Room</title>
 
 	<link rel="stylesheet" href="style-p2.css" />
-	<script src="java/jquery-3.6.0.min.js"></script>	
+	<script src="jquery-3.6.0.min.js"></script>	
 </head>
 <body>	
 	<div class="container">
@@ -31,12 +31,13 @@
 			<!--video player start-->
 			<div class="videoPlayer">	
 				<div class="videos">
-					<video class="videox active" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase1/01.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV2" loop><source src="Assets/Phase1/02.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV3" loop><source src="Assets/Phase1/03.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV4" loop><source src="Assets/Phase1/04.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV5" loop><source src="Assets/Phase1/05.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV6" loop><source src="Assets/Phase1/06.webm" type="video/webm" alt=""></video>
+					<video class="videox active" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase2/01.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV2" loop><source src="Assets/Phase2/02.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV3" loop><source src="Assets/Phase2/03.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV4" loop><source src="Assets/Phase2/04.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV5" loop><source src="Assets/Phase2/05.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV6" loop><source src="Assets/Phase2/06.webm" type="video/webm" alt=""></video>
+					<video class="videox" id="phaseOneV7" loop><source src="Assets/Phase2/07.webm" type="video/webm" alt=""></video>
 				</div>				
 			</div>
 			<!--video player end-->
@@ -48,17 +49,18 @@
 			<!--image slider start-->
 			<div class="slider">				
 				<div class="slides" id="slides">						
-					<div class="slide one"><img id="phaseOne1" src="Assets/Phase1/1.png" alt="" ></div>
-					<div class="slide two"><img id="phaseOne2" src="Assets/Phase1/2.png" alt=""></div>				
-					<div class="slide three"><img id="phaseOne3" src="Assets/Phase1/4.png" alt=""></div>
-					<div class="slide four"><img id="phaseOne4" src="Assets/Phase1/5.png" alt=""></div>
-					<div class="slide five"><img id="phaseOne5" src="Assets/Phase1/6.png" alt=""></div>
-					<div class="slide six"><img id="phaseOne6" src="Assets/Phase1/3.png" alt=""></div>			
+					<div class="slide one"><img id="phaseOne1" src="Assets/Phase2/1.png" alt="" ></div>
+					<div class="slide two"><img id="phaseOne2" src="Assets/Phase2/2.png" alt=""></div>				
+					<div class="slide three"><img id="phaseOne3" src="Assets/Phase2/4.png" alt=""></div>
+					<div class="slide four"><img id="phaseOne4" src="Assets/Phase2/5.png" alt=""></div>
+					<div class="slide five"><img id="phaseOne5" src="Assets/Phase2/6.png" alt=""></div>
+					<div class="slide six"><img id="phaseOne6" src="Assets/Phase2/3.png" alt=""></div>	
+					<div class="slide seven"><img id="phaseOne7" src="Assets/Phase2/7.png" alt=""></div>			
 				</div>		
 
 				<div class="rangeSlider">
 					<div class="rangeSlider width">
-						<input type="range" id="slider" value="-20" min="-69" max="30" step="-1" />
+						<input type="range" id="slider" value="-55" min="-110" max="0" step="-1" />
 
 						<div id="selector">
 							<div class="selectBtn"></div>
@@ -92,15 +94,15 @@
 
 			<!--navigation button start-->
 			<div class="navigationBtn">
-				<a href="#" class="button">BACK</a>
-				<a href="#" class="button main">NEXT</a>
+				<a href="index.html" class="button">BACK</a>
+				<a href="index-p3.html" class="button main">NEXT</a>
 			</div>
 			<!--navigation button end-->
 
 		</div>
 		<!--Manual section end-->		
 	</div>
-	<script src="java/script-p2.js"></script>
+	<script src="script.js"></script>
 
 	<svg  class="svgIcons" xmlns="http://www.w3.org/2000/svg">
 		<symbol id="playIcon" viewBox="0 0 8 8" fill="none">
