--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Fitting Room</title>
 
 	<link rel="stylesheet" href="style-p1.css" />
-	<script src="java/jquery-3.6.0.min.js"></script>	
+	<script src="jquery-3.6.0.min.js"></script>	
 </head>
 <body>	
 	<div class="container">
@@ -58,7 +58,7 @@
 
 				<div class="rangeSlider">
 					<div class="rangeSlider width">
-						<input type="range" id="slider" value="-20" min="-69" max="30" step="-1" />
+						<input type="range" id="slider" value="-50" min="-100" max="0" step="-1" />
 
 						<div id="selector">
 							<div class="selectBtn"></div>
@@ -92,15 +92,15 @@
 
 			<!--navigation button start-->
 			<div class="navigationBtn">
-				<a href="#" class="button">BACK</a>
-				<a href="#" class="button main">NEXT</a>
+				<a href="index.html" class="button">RESET</a>
+				<a href="index-p2.html" class="button main">NEXT</a>
 			</div>
 			<!--navigation button end-->
 
 		</div>
 		<!--Manual section end-->		
 	</div>
-	<script src="java/script-p1.js"></script>
+	<script src="script.js"></script>
 
 	<svg  class="svgIcons" xmlns="http://www.w3.org/2000/svg">
 		<symbol id="playIcon" viewBox="0 0 8 8" fill="none">
