Vid + Check Function + Time Updated
YCH

- add mov src for safari case
- add check icon and toggle function
-add update current time frame function

--- a/index-p2.html
+++ b/index-p2.html
@@ -18,12 +18,47 @@
 			</div>
 			<div class="panelTwo">
 				<div id="planelTwoText">
-					<p>
-						Prototype<br>
+					<p class="description show" id="description-1">
+						Phygital Material<br>
 						<br>
-						- Centre<br>
-						- High Capacity<br>
-						- Seperated<br>
+						• Liquid Body<br>
+						• Fluid<br>
+					</p>
+					<p class="description" id="description-2">
+						Phygital Material<br>
+						<br>
+						• Projection<br>
+						• 3D Profile<br>
+					</p>
+					<p class="description" id="description-3">
+						Phygital Material<br>
+						<br>
+						• Dual Body<br>
+						• Softness<br>
+					</p>
+					<p class="description" id="description-4">
+						Phygital Material<br>
+						<br>
+						• Sticky<br>
+						• Glutinous<br>
+					</p>
+					<p class="description" id="description-5">
+						Scanned Material<br>
+						<br>
+						• Metal<br>
+						• Fluid<br>
+					</p>
+					<p class="description" id="description-6">
+						Scanned Material<br>
+						<br>
+						• Concrete<br>
+						• Inflated<br>
+					</p>
+					<p class="description" id="description-7">
+						Scanned Material<br>
+						<br>
+						• OBS Board<br>
+						• Softness<br>
 					</p>
 				</div>
 			</div>
@@ -31,13 +66,34 @@
 			<!--video player start-->
 			<div class="videoPlayer">	
 				<div class="videos">
-					<video class="videox active" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase2/01.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV2" loop><source src="Assets/Phase2/02.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV3" loop><source src="Assets/Phase2/03.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV4" loop><source src="Assets/Phase2/04.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV5" loop><source src="Assets/Phase2/05.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV6" loop><source src="Assets/Phase2/06.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV7" loop><source src="Assets/Phase2/07.webm" type="video/webm" alt=""></video>
+					<video class="videox active" id="phaseOneV1" muted autoplay loop>
+						<source src="Assets/Phase2/01-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase2/01.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV2" loop>
+						<source src="Assets/Phase2/02-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase2/02.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV3" loop>
+						<source src="Assets/Phase2/03-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase2/03.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV4" loop>
+						<source src="Assets/Phase2/04-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase2/04.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV5" loop>
+						<source src="Assets/Phase2/05-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase2/05.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV6" loop>
+						<source src="Assets/Phase2/06-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase2/06.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV7" loop>
+						<source src="Assets/Phase2/07-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase2/07.webm" type="video/webm" alt="">
+					</video>
 				</div>				
 			</div>
 			<!--video player end-->
@@ -49,13 +105,34 @@
 			<!--image slider start-->
 			<div class="slider">				
 				<div class="slides" id="slides">						
-					<div class="slide one"><img id="phaseOne1" src="Assets/Phase2/1.png" alt="" ></div>
-					<div class="slide two"><img id="phaseOne2" src="Assets/Phase2/2.png" alt=""></div>				
-					<div class="slide three"><img id="phaseOne3" src="Assets/Phase2/4.png" alt=""></div>
-					<div class="slide four"><img id="phaseOne4" src="Assets/Phase2/5.png" alt=""></div>
-					<div class="slide five"><img id="phaseOne5" src="Assets/Phase2/6.png" alt=""></div>
-					<div class="slide six"><img id="phaseOne6" src="Assets/Phase2/3.png" alt=""></div>	
-					<div class="slide seven"><img id="phaseOne7" src="Assets/Phase2/7.png" alt=""></div>			
+					<div class="slide x">
+						<div class="checkIcon"><img id="check1" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne1" src="Assets/Phase2/1.png" alt="" >
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check2" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne2" src="Assets/Phase2/2.png" alt="">
+					</div>				
+					<div class="slide x">
+						<div class="checkIcon"><img id="check3" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne3" src="Assets/Phase2/4.png" alt="">
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check4" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne4" src="Assets/Phase2/5.png" alt="">
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check5" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne5" src="Assets/Phase2/6.png" alt="">
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check6" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne6" src="Assets/Phase2/3.png" alt="">
+					</div>	
+					<div class="slide x">
+						<div class="checkIcon"><img id="check7" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne7" src="Assets/Phase2/7.png" alt="">
+					</div>			
 				</div>		
 
 				<div class="rangeSlider">
@@ -75,19 +152,19 @@
 				<div class="column">
 					<div class="step">1</div>
 					<h3>Arch-Element</h3>
-					<div class="pWrap"><p>Select your elements that meets your design envrionment.</p></div>
+					<div class="pWrap"><p>Select one spatial element that meets your design envrionment.</p></div>
 				</div>
 				<div class="column gap">></div>
 				<div class="column">
 					<div class="step Active">2</div>
 					<h3>Phygital Library</h3>
-					<div class="pWrap"><p>Select your physical and digital material that helps your design progress.</p></div>
+					<div class="pWrap"><p>Select a set of physical and digital materials that helps your design progress.</p></div>
 				</div>
 				<div class="column gap">></div>
 				<div class="column long">
 					<div class="step">3</div>
 					<h3>Tailor Environment</h3>
-					<div class="pWrap"><p>Apply your element choices to customize your design envrionment.</p></div>
+					<div class="pWrap"><p>Apply those element choices to customize your design envrionment.</p></div>
 				</div>
 			</div>
 			<!--instruction end-->
