--- a/index.html
+++ b/index.html
@@ -18,12 +18,47 @@
 			</div>
 			<div class="panelTwo">
 				<div id="planelTwoText">
-					<p>
-						Prototype<br>
+					<p class="description show" id="description-1">
+						Spatial Prototype<br>
 						<br>
-						- Centre<br>
-						- High Capacity<br>
-						- Seperated<br>
+						• Decentre<br>
+						• Cornerless<br>
+						• Stacked<br>
+					</p>
+					<p class="description" id="description-2">
+						Spatial Prototype<br>
+						<br>
+						• Centre<br>
+						• High Capacity<br>
+						• Seperated<br>
+					</p>
+					<p class="description" id="description-3">
+						Spatial Prototype<br>
+						<br>
+						• Intersecting<br>
+						• Sectional<br>
+						• Distinct<br>
+					</p>
+					<p class="description" id="description-4">
+						Spatial Prototype<br>
+						<br>
+						• Tiered<br>
+						• Open<br>
+						• Continuty<br>
+					</p>
+					<p class="description" id="description-5">
+						Spatial Prototype<br>
+						<br>
+						• Grid<br>
+						• Individual<br>
+						• Stacked<br>
+					</p>
+					<p class="description" id="description-6">
+						Spatial Prototype<br>
+						<br>
+						• Linear<br>
+						• Direct<br>
+						• Split<br>
 					</p>
 				</div>
 			</div>
@@ -31,12 +66,30 @@
 			<!--video player start-->
 			<div class="videoPlayer">	
 				<div class="videos">
-					<video class="videox active" id="phaseOneV1" muted autoplay loop><source src="Assets/Phase1/01.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV2" loop><source src="Assets/Phase1/02.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV3" loop><source src="Assets/Phase1/03.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV4" loop><source src="Assets/Phase1/04.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV5" loop><source src="Assets/Phase1/05.webm" type="video/webm" alt=""></video>
-					<video class="videox" id="phaseOneV6" loop><source src="Assets/Phase1/06.webm" type="video/webm" alt=""></video>
+					<video class="videox active" id="phaseOneV1" muted autoplay loop>
+						<source src="Assets/Phase1/01-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase1/01.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV2" loop>
+						<source src="Assets/Phase1/02-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase1/02.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV3" loop>
+						<source src="Assets/Phase1/03-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase1/03.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV4" loop>
+						<source src="Assets/Phase1/04-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase1/04.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV5" loop>
+						<source src="Assets/Phase1/05-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase1/05.webm" type="video/webm" alt="">
+					</video>
+					<video class="videox" id="phaseOneV6" loop>
+						<source src="Assets/Phase1/06-1.mov" type="video/quicktime" alt="">
+						<source src="Assets/Phase1/06.webm" type="video/webm" alt="">
+					</video>
 				</div>				
 			</div>
 			<!--video player end-->
@@ -48,12 +101,30 @@
 			<!--image slider start-->
 			<div class="slider">				
 				<div class="slides" id="slides">						
-					<div class="slide one"><img id="phaseOne1" src="Assets/Phase1/1.png" alt="" ></div>
-					<div class="slide two"><img id="phaseOne2" src="Assets/Phase1/2.png" alt=""></div>				
-					<div class="slide three"><img id="phaseOne3" src="Assets/Phase1/4.png" alt=""></div>
-					<div class="slide four"><img id="phaseOne4" src="Assets/Phase1/5.png" alt=""></div>
-					<div class="slide five"><img id="phaseOne5" src="Assets/Phase1/6.png" alt=""></div>
-					<div class="slide six"><img id="phaseOne6" src="Assets/Phase1/3.png" alt=""></div>			
+					<div class="slide x">
+						<div class="checkIcon"><img id="check-1" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne1" src="Assets/Phase1/1.png" alt="" >
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check-2" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne2" src="Assets/Phase1/2.png" alt="">
+					</div>				
+					<div class="slide x">
+						<div class="checkIcon"><img id="check-3" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne3" src="Assets/Phase1/4.png" alt="">
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check-4" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne4" src="Assets/Phase1/5.png" alt="">
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check-5" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne5" src="Assets/Phase1/6.png" alt="">
+					</div>
+					<div class="slide x">
+						<div class="checkIcon"><img id="check-6" src="Assets/Fonts/check.png" alt="" ></div>
+						<img id="phaseOne6" src="Assets/Phase1/3.png" alt="">
+					</div>			
 				</div>		
 
 				<div class="rangeSlider">
@@ -73,19 +144,19 @@
 				<div class="column">
 					<div class="step Active">1</div>
 					<h3>Arch-Element</h3>
-					<div class="pWrap"><p>Select your elements that meets your design envrionment.</p></div>
+					<div class="pWrap"><p>Select one spatial element that meets your design envrionment.</p></div>
 				</div>
 				<div class="column gap">></div>
 				<div class="column">
 					<div class="step">2</div>
 					<h3>Phygital Library</h3>
-					<div class="pWrap"><p>Select your physical and digital material that helps your design progress.</p></div>
+					<div class="pWrap"><p>Select a set of physical and digital materials that helps your design progress.</p></div>
 				</div>
 				<div class="column gap">></div>
 				<div class="column long">
 					<div class="step">3</div>
 					<h3>Tailor Environment</h3>
-					<div class="pWrap"><p>Apply your element choices to customize your design envrionment.</p></div>
+					<div class="pWrap"><p>Apply those element choices to customize your design envrionment.</p></div>
 				</div>
 			</div>
 			<!--instruction end-->
